--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "export": "next export",
     "start": "next start"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "fsevents": "^2.1.3",
     "next": "^8.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
+  },
+  "devDependencies": {
+    "serverless-next.js": "^1.9.10",
+    "serverless-nextjs-plugin": "^2.4.10"
   }
 }
